<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:orderInCategory="100"
        android:title="@string/menu_home"/>

    <item
        android:id="@+id/action_board"
        android:orderInCategory="100"
        android:icon="@drawable/document"
        android:title="@string/menu_discover"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_chart"
        android:icon="@drawable/chart"
        android:orderInCategory="100"
        android:title="@string/menu_favorite" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:icon="@drawable/user"
        android:title="@string/menu_profile"
        app:showAsAction="never" />
</menu>
