<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.HomeActivity"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/lime_100"
            android:layout_marginBottom="180dp"
            android:layout_marginRight="13dp"
            android:src="@drawable/ic_cart"
            android:visibility="invisible"
            android:clickable="true"
            android:elevation="6dp"
            app:borderWidth="0dp"
            app:fabSize="auto"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/lime_100"
            android:layout_marginBottom="130dp"
            android:layout_marginRight="13dp"
            android:src="@drawable/create"
            android:visibility="invisible"
            android:elevation="6dp"
            android:clickable="true"
            app:borderWidth="0dp"
            app:fabSize="auto"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/lime_300"
            android:layout_marginBottom="75dp"
            android:layout_marginRight="13dp"
            android:elevation="6dp"
            android:src="@drawable/add"
            android:clickable="true"
            app:borderWidth="0dp"
            app:fabSize="auto"/>

        <RelativeLayout
            android:id="@+id/home_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                android:background="@android:color/white"
                tools:ignore="NotSibling">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/search_bar_home"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/light_green_300">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="10dp"
                            android:clipToPadding="false"
                            app:cardBackgroundColor="@android:color/white"
                            app:cardCornerRadius="5dp"
                            app:cardElevation="3dp"
                            app:cardUseCompatPadding="false"
                            app:layout_collapseMode="parallax">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <RelativeLayout
                                    android:layout_width="50dp"
                                    android:layout_height="match_parent">

                                    <ImageView
                                        android:id="@+id/btn_search"
                                        android:layout_width="25dp"
                                        android:layout_height="25dp"
                                        android:layout_centerInParent="true"
                                        android:src="@drawable/ic_search" />

                                </RelativeLayout>

                                <EditText
                                    android:id="@+id/search_text_home"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:hint="@string/home_search"
                                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                                    android:textColor="@color/grey_40"
                                    android:textSize="13sp" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/category_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/search_bar_home"
                        android:layout_marginTop="20sp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="14dp"
                            android:layout_weight="1"
                            android:text="@string/home_categories"
                            android:textColor="@color/titleColor"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/categories_list"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="22dp"
                            android:gravity="center"
                            android:text="@string/home_view_all"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp"
                            app:fontFamily="@font/roboto_medium" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/trending_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="110dp"
                        android:layout_below="@id/category_title"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:id="@+id/product_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/trending_recycler_view"
                        android:layout_marginTop="20sp"
                        android:layout_marginBottom="5dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_weight="1"
                            android:text="@string/home_places"
                            android:textColor="@color/titleColor"
                            android:textSize="22sp" />


                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/place_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/product_title"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp" />

                </RelativeLayout>

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:id="@+id/bottom_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:background="@drawable/shadow_view" />

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottom_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="#FFFFFC"
                    app:itemIconTint="#58C10C"
                    app:itemTextColor="#0E0E0E"
                    app:labelVisibilityMode="labeled"
                    app:menu="@menu/menu_home"/>

            </LinearLayout>
        </RelativeLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white">


            <ImageView
                android:id="@+id/browse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/semofarm_title1" />


        </androidx.appcompat.widget.Toolbar>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        />

</androidx.drawerlayout.widget.DrawerLayout>

