<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <RelativeLayout
        android:id="@+id/relSearch"
        android:layout_width="match_parent"
        android:background="@color/light_green_300"
        android:layout_height="200dp">

        <RelativeLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/browse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="22dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:text="@string/profile_toolbar"
                android:textColor="@android:color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:fontFamily="@font/roboto_condensed_bold" />
            >

        </RelativeLayout>

    </RelativeLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="false"
        app:layout_collapseMode="parallax">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/card_profile_name"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/profile_image"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/splash1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/search_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="홍 길동"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_900"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/profile_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/search_text"
                            android:layout_centerVertical="true"
                            android:text="gildong123@gmail.com"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_40"
                            android:textSize="14sp" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/card_profile_name"
                android:background="@color/grey_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/view1"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/reports"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/report"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="18dp"
                            android:background="@color/white"
                            android:gravity="center"
                            android:text="불편사항신고"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/grey_40"
                            android:textSize="16sp" />


                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/ic_report1" />


                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_below"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_bar"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="false"
        app:layout_collapseMode="parallax">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linear1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/favorite_foods"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8">

                    <TextView
                        android:id="@+id/account_favorite_foods"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="18dp"
                        android:text="@string/profile_favorite_foods"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_40"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="5dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_centerInParent="true"
                            android:src="@drawable/star2" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/linear1"
                android:background="@color/grey_10" />

            <LinearLayout
                android:id="@+id/favorite_restaurants"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/view2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8">

                    <TextView
                        android:id="@+id/account_favorite_restaurants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="18dp"
                        android:text="@string/profile_favorite_restaurants"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_40"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/chatpeople" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>
            //로그아웃추가코드
            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/favorite_restaurants"
                android:background="@color/grey_10" />

            <LinearLayout
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_below="@id/view3"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8">

                    <TextView
                        android:id="@+id/logout_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="18dp"
                        android:text="로그아웃"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/grey_40"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:gravity="center_vertical">

                        <ImageButton
                            android:id="@+id/LogoutButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/logout" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>
            <View
                android:id="@+id/view4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/logout"
                android:background="@color/grey_10" />

            <Button
                android:id="@+id/revokeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/view4"
                android:background="@color/white"
                android:text="회원탈퇴"
                android:textColor="@color/red_300" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <!--<ScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_marginTop="?android:attr/actionBarSize"-->
    <!--android:layout_marginBottom="50dp"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:background="@android:color/white">-->
    <!---->

    <!--</ScrollView>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@drawable/shadow_view" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#FFFFFC"
            app:itemIconTint="#58C10C"
            app:itemTextColor="#0E0E0E"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/menu_home"/>

    </LinearLayout>


</RelativeLayout>